--- a/smarter-tasks/netlify.toml
+++ b/smarter-tasks/netlify.toml
@@ -1,8 +1,9 @@
 # example netlify.toml
 [build]
+  base="smarter-tasks"
   command = "cd smarter-tasks && npm run build"
   functions = "netlify/functions"
-  publish = ""
+  publish = "dist"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
