--- a/smarter-tasks/netlify.toml
+++ b/smarter-tasks/netlify.toml
@@ -1,7 +1,7 @@
 # example netlify.toml
 [build]
   base="smarter-tasks"
-  command = "cd smarter-tasks && npm run build"
+  command = "npm run build"
   functions = "netlify/functions"
   publish = "dist"
 
